GNOME Bugzilla – Bug 763318
v4l2: fix capture with bayer formats other than bggr
Last modified: 2016-03-11 15:56:22 UTC
gst_v4l2_object_get_caps_info() always return V4L2_PIX_FMT_SBGGR8 for all bayer formats. This is obviously broken if the device use another ordering. Fix this by properly reading the format parameter.
Created attachment 323390 [details] [review] Proposed patch that fix the issue
Thanks, good catch.